Eduprov : 30-07-2021 : Add new meta tags and schema.org

--- a/bachelor-of-designing-course.html
+++ b/bachelor-of-designing-course.html
@@ -2,96 +2,99 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>B.Des Admission Eligibility Top Colleges | Eduprov</title>
-  <meta name="description" content="B.Des courses deals with designing infrastructure, graphics, websites, games, fashion & more. For counselling, admission in colleges, scope & career @ EDUPROV
-    ">
-  <meta name="keywords" content="bachelor of designing,bachelor of interior design,bachelor of fashion design,bachelor of graphic design,ba interior design,bachelor of architecture degree,interior design bachelor degree,bachelor of fashion technology,ba graphic design,bachelor's degree in graphic design,ba fashion design,bachelor of game design,ba animation and graphic design,bachelor's degree in fashion designing,bachelor of design course,bachelor of visual communication,ba in animation and graphic design,bachelor of planning and design,bachelor of product design,bachelor of fashion design colleges,bachelor of design syllabus,bachelor's in graphic design,design bachelor degree,ba in visual communication,ba design,bachelor of industrial design,bachelor of design in architecture,bachelor of science in interior design,bachelor of interior architecture,bachelor of science in game design and development,bachelor of communication design,bachelor of arts in graphic design,bachelor of design computing,bachelor of arts in fashion design,bachelor of design visual communication,ba in design,game design bachelor's degree,bachelor of textile design,ba interior architecture and design,bachelor of design in animation,bachelor of fashion,bachelor of building design,bachelor of architecture interior design,bachelor's degree in art and design,game development bachelor's degree,ba communication design,ba product design,bachelor of game design and development,bachelor of design in product design,bachelor of arts design,bachelor of interior design course details,bachelor of arts and design,bachelor of arts in game design,bachelor degree of fashion designing,bachelor of fine arts in graphic design,bachelor of building design management,ba industrial design,bachelor of design anu,bachelor of fashion design course details,bachelor of fine arts major in industrial design,bachelor of science in graphic design,bachelor of urban design,bachelor of design and technology,bachelor degree drafting and design technology,bachelor of fashion design and technology,bachelor of science in industrial design,fashion bachelor's degree,bachelor of game development,bachelor of interaction design,bachelor of arts interior design,fashion designer bachelor degree,industrial design bachelor's degree,bachelor in design iit,bachelor of design in interior architecture,bachelor of design interior design,bachelor of design entrance exam,bachelor of design interior architecture,bachelor of design nift,bachelor of science in architecture major in interior design,bachelor of science in design,bachelor of fashion merchandising,bachelor of animation and graphic design,bachelor of science in fashion design,bachelor of design honours,bachelor of digital design,bachelor of science in animation game design and development,bachelor of design innovation,game design bachelor of science,bachelor of fashion design syllabus,bachelor of design course details,fashion merchandising bachelor degree,ba in digital media design,bachelor of arts in fashion design and merchandising,bachelor of design deakin,bachelor of design in fashion and textiles,bachelor of fine arts in interior design,bachelor of design colleges,bachelor of computational design,bachelor of design in graphic design,ux bachelor degree,nid bachelor of design,bachelor of interior design course,ba visual arts interior design,bachelor of design conestoga,fashion designing bachelor course,bachelor of business design and marketing,bachelor in interior design colleges,bachelor of design eligibility,bachelor of design massey,bachelor of fashion technology syllabus,bachelor of jewellery design,product design bachelor degree,bachelor of fashion business,bachelor of music and sound design,ba interior,ba in fashion,bachelor of planning and design information,bachelor of interior design eligibility,visual communication bachelor degree,bachelor of fine arts major in fashion design,bachelors in textile design courses,ba digital media design,bachelor of branded fashion design,bachelor degree in ux design,bachelor of interior design course duration,bachelor of design industrial design,ba interior design colleges,bachelor of ux design,bachelors in graphic design courses,bachelor in design course,bachelor of design studies,bachelor of industrial technology major in garments fashion and design,fashion designer bachelor,ba interior architecture and design colleges,ba designer,bachelor of design means,bachelor of fashion designer,bachelor of design in visual communication design,bachelor in game design and development,bachelor of multimedia design,bachelor of fashion and apparel design,bachelor of fine arts in game design,curtin bachelor of design,bachelor of fashion designing course,bachelor of fine arts and design,deakin bachelor of design,bachelor of science in graphics and design,bachelor of business and design,bachelor of design arts,bachelor of design graphic design,bachelor of design short form,bachelor of technology design,best colleges for bachelor of design,fashion business bachelor,ba in interior architecture,bachelor of design computing and bachelor of advanced studies,bachelors in fashion,fashion business bachelor degree,bachelor of design iit bombay,urban design bachelor's degree,urban design bachelor,ba fashion technology,bachelor of architecture and interior design,bachelor of science in textile and fashion technology,bachelors in ux design,bachelor of design and business,ux designer bachelor degree,bachelor of architecture in interior design,bachelor of textile,ba architecture and interior design,bachelor of design engineering,bachelor's degree in textile design,interior design bachelor course,ba in interior design colleges,bachelor of design product design,bachelor of science in fashion design and textile technology,bachelor of media design,bachelor of arts in industrial design,bachelor of interior design degree,bachelor of fine arts major in interior design,bachelor of spatial design,product design undergraduate,ba graphic design colleges,bachelor of graphic design courses,bachelor of fashion design short form,bachelor of arts in production design,bachelors of environmental design,bachelor of fine arts in interior architecture,interior designer bachelor's degree,bachelor design architecture,bachelor of design careers,bachelor of design course duration,industrial design engineering bachelor,bachelor of fine arts in fashion design,bachelor of textile design colleges,digital design bachelor degree,bachelor of design multimedia,bachelor of design in accessory design,eligibility for b design,ba design management,bachelor in graphic design and animation,bachelor of visual design,bachelor of science in art and design,bachelor of design uwa,ba interior design syllabus,bachelor of visual arts and design acu,bachelor in design syllabus,bachelor of design fashion design,interior design bachelor canada,bachelor of communication design monash,bachelor of arts in interior architecture,bachelor of design architecture deakin,bachelor of design majors,ba in interior architecture and design,bachelor degree in design engineering,bachelor of vocation in interior design,bachelor textile design,bachelor degree in jewelry design,bachelor of fashion design course duration,bachelor in fashion communication,bachelor interactive media design,bachelor of arts in fashion design and marketing,bachelor in graphics technology major in industrial design,digital design bachelor,bachelor of applied science interior architecture,bachelor of graphics technology major in industrial design,bachelor of industrial technology major in interior design technology,bachelor of industrial art and design,
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/bachelor-of-designing-course.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bachelor of Designing Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/bachelor-of-designing-course.html"
+      },
+      "headline": "Bachelor of Designing Admission Guidance in Bangalore",
+      "description": "Have you ever wondered what job can combine your favorite hobbies and passion? Then, designing is your career! Designing is one of the most market-friendly courses that are always on demand.",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-07-30",
+      "dateModified": "2021-07-30"
+    }
+    </script>
+  <meta name="description" content="Have you ever wondered what job can combine your favorite hobbies and passion? Then, designing is your career! Designing is one of the most market-friendly courses that are always on demand.">
+  <meta name="keywords" content=" 
   
-    ">
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Bachelor of Designing Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/bachelor-of-designing-course.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Have you ever wondered what job can combine your favorite hobbies and passion? Then, designing is your career! Designing is one of the most market-friendly courses that are always on demand." />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="Bachelor of Designing Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Have you ever wondered what job can combine your favorite hobbies and passion? Then, designing is your career! Designing is one of the most market-friendly courses that are always on demand." />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
-
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <div class="navbar-nav ml-auto ">
-            <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-                class="fa fa-home"></i> Home</a>
-            <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-                class="fa fa-phone-square"></i> Contact</a>
-            <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-                class="fa fa-user"></i> Student Form</a>
-          </div>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>Bachelor of Designing</h1>
-        </div>
-      </div>
+  
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">Bachelor of Designing</h1>
       </div>
     </div>
   </div>
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -183,7 +186,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Eligibility
 
         </h2>
@@ -220,7 +223,7 @@
       </div>
 
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Top Colleges
         </h2>
       </div>
