--- a/bcom-hons-course.html
+++ b/bcom-hons-course.html
@@ -2,95 +2,99 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Bachelor of Commerce Hons Admission Colleges Career | Eduprov</title>
-  <meta name="description"
-    content="B.Com Hons deals with functioning of business with knowledge in finance, accounts, taxation & management. Get admission in top colleges, career & scope visit EDUPROV">
-  <meta name="keywords" content=" bachelor of commerce,bachelor of commerce subjects,bachelor of commerce honours,bachelor degree in commerce,commerce honours,bachelor of commerce in accounting and finance,commerce first year subjects,undergraduate courses in commerce,bachelor of commerce in accounting,bachelor of commerce in business management,bachelor of commerce abbreviation,commerce major,bachelor of commerce in economics,bachelor of commerce in financial management,bachelor of commerce finance,bachelor of commerce in human resource management,bachelor of commerce in business informatics,bachelor of commerce in marketing management,bachelor of commerce marketing,bachelor of commerce majors,bachelor of commerce management,bachelor of commerce course list,bachelor of commerce options,bachelor of commerce bhu undergraduate,bachelor of commerce in entrepreneurship,bachelor of commerce graduation,bachelor of commerce and advanced studies,bachelor courses after 12th commerce,bachelor of commerce in banking and insurance,bachelor of commerce general,bachelor of commerce careers,bachelor degree for commerce students,bachelor of commerce in financial markets,bachelor of e commerce,bachelor of commerce in information and technology management,bachelor of commerce major in accounting,bachelor degree after 12th commerce,graduation subjects in commerce,bachelor of commerce computer application,bachelor of commerce international business,bachelor of commerce in tourism management,bachelor of commerce finance option,bachelor of commerce courses,bachelor of commerce major in finance,bachelor of commerce in accounting & finance,graduation commerce subjects,bachelor of commerce accounting option,bachelor courses for commerce students,commerce in accounting,bachelor of commerce honours in business management,bachelor of commerce international,bachelor of commerce in information technology,bachelor of commerce advanced studies,bachelor of commerce honors,bachelor of commerce mun,bachelor of commerce and economics,bachelor of commerce degree certificate,e commerce bachelor degree,best bachelor degree for commerce students,bachelor of commerce in banking & insurance,bachelor of commerce course units,bachelor of comm,bachelor of commerce and psychology,bba commerce subjects,bachelor of commerce and bachelor of advanced studies,bachelor of commerce honours degree,bachelor of commerce and finance,bachelor of commerce accounting department,bachelor of commerce description,bachelor of commerce professional,bachelor of commerce specializations,bachelor of commerce professional accounting,bachelor of commerce prerequisites,bachelor of advanced computing and bachelor of commerce,bachelor of commerce double major,bachelor of commerce in tourism and hospitality management,commerce major in accounting,bachelor of commerce major in management,commerce major in management,bachelor of electronic commerce,bachelor of commerce in industrial and organisational psychology careers,bachelor of commerce subjects list,bachelor of commerce in banking and finance,bachelor of commerce study plan,best bachelor degree after 12th commerce,bachelor of commerce in international accounting,bachelor of commerce business technology management,bachelor of commerce program,bachelor of commerce liberal studies,bachelor of commerce honours in human resource management,best bachelor degree in commerce,bachelor of commerce banking and finance,bachelor of engineering and commerce,bachelor of commerce and bachelor of information technology,bachelor of commerce and business administration,about bachelor of commerce,degree of bachelor of commerce,bachelor of applied commerce,bachelor of commerce degree abbreviation,bachelor of commerce honours subjects,bachelor of commerce in management marketing,bachelor of commerce banking and insurance,bachelor of commerce in financial accounting,bachelor's degree after 12 commerce,bachelor of commerce and information technology,bachelor of commerce bharathiar university ug,bachelor of commerce in retail management,bachelor of commerce in banking and financial services,bachelor of commerce in accountancy,bachelor of commerce honours in marketing management,bachelor of commerce and administration,bachelor of commerce and it,commerce major in marketing,bachelor of commerce in business administration,bachelor of commerce finance and accounting,bachelor of commerce honours in business informatics,bachelor of commerce and bachelor of psychology,commerce honours subjects,bachelor of economics and commerce,courses after bachelor of commerce,bachelor degree in commerce stream,bachelor of commerce business administration,commerce finance major,bachelor of commerce in business management careers,after bachelor of commerce,bachelor of engineering honours and bachelor of commerce,bachelor of commerce honours in financial management,bachelor of commerce in chartered accountancy,bachelor of commerce information technology,1st year subjects of commerce,bachelor of commerce international finance,bachelor of commerce electives,bachelor of commerce double degree,bachelor of commerce in industrial and organisational psychology,bachelor of commerce bachelor of advanced studies,bachelor of commerce major in marketing,bachelor of commerce eligibility,
-  
+  <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="canonical" href="https://eduprov.com/bcom-hons-course.html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bachelor of Commerce Hons Admission Guidance in Bangalore</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://eduprov.com/bcom-hons-course.html"
+        },
+        "headline": "Bachelor of Commerce Hons Admission Guidance in Bangalore",
+        "description": "This globe evolves with commerce. Commerce can be simply termed as trade. There is no such record of when this trade started, but now it has become the backbone of a business. Commerce deals with the trade-in large scale. Understanding commerce is very important for every business.",
+        "image": "https://eduprov.com/images/favicon.png",  
+        "author": {
+          "@type": "Person",
+          "name": "thephotogenicbug"
+        },  
+        "publisher": {
+          "@type": "Organization",
+          "name": "Eduprov",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://eduprov.com/images/favicon.png"
+          }
+        },
+        "datePublished": "2021-07-30",
+        "dateModified": "2021-07-30"
+      }
+      </script>
+    <meta name="description" content=" This globe evolves with commerce. Commerce can be simply termed as trade. There is no such record of when this trade started, but now it has become the backbone of a business. Commerce deals with the trade-in large scale. Understanding commerce is very important for every business.">
+    <meta name="keywords" content=" 
+    
     ">
-  <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Bachelor of Commerce Hons Admission Guidance in Bangalore" />
+    <meta property="og:url" content="https://eduprov.com/bcom-hons-course.html" />
+    <meta property="og:site_name" content="Eduprov Educational Institute" />
+    <meta property="og:description"
+      content="This globe evolves with commerce. Commerce can be simply termed as trade. There is no such record of when this trade started, but now it has become the backbone of a business. Commerce deals with the trade-in large scale. Understanding commerce is very important for every business." />
+    <meta property="og:image" content="#" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@eduprov" />
+    <meta name="twitter:title" content="Bachelor of Commerce Hons Admission Guidance in Bangalore" />
+    <meta name="twitter:description"
+      content="This globe evolves with commerce. Commerce can be simply termed as trade. There is no such record of when this trade started, but now it has become the backbone of a business. Commerce deals with the trade-in large scale. Understanding commerce is very important for every business." />
+    <meta name="twitter:image" content="" />
+    <meta name="twitter:url" content="https://twitter.com/eduprov" />
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+    <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+    <meta name="author" content="thephotogenicbug">
+    <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="accordian.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+    <!-- MDB -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
-
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>Bachelor of Commerce Hons</h1>
-        </div>
-      </div>
+  
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">Bachelor of Commerce Hons </h1>
       </div>
     </div>
   </div>
+ 
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
