--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
     <ul class="nav-links">
       <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
-      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
       <li style="font-weight: bold;"><a href="#">Contact us</a></li>
     </ul>
   </nav>
@@ -134,7 +134,7 @@
         <h2 class="display-8 mb-3 fw-bold lh-2"> Eduprov Education Institute</h2>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
           <a href="tel:+91 80 25591146" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Call us</a>
-          <a href="https://eduprov-application.vercel.app/#/"
+          <a href="https://eduprov.com/application-form.php"
             class="btn btn-success btn-lg px-4 me-md-2 fw-bold">Application Form</a>
             <!-- <a href="https://api.whatsapp.com/send?phone=919008006228"
             class="btn btn-danger btn-lg px-4 me-md-2 fw-bold"><i class="fab fa-whatsapp"></i></a> -->
@@ -534,28 +534,6 @@
       </div>
     </div>
   </section>
-
-   <div class="container">
-     <div class="row">
-      <form action="pro.php" method="POST">
-        <div class="form-group">
-            <label>Name:</label>
-            <input type="text" name="name" class="form-control" required>
-        </div>
-        <div class="form-group">
-            <label>Email:</label>
-            <input type="email" name="email" class="form-control" required>
-        </div>
-        <div class="form-group">
-            <label>Message:</label>
-            <textarea class="form-control" name="message" required></textarea>
-        </div>
-        <div class="form-group mt-4">
-            <button class="btn btn-success" type="submit">Submit</button>
-        </div>
-    </form>
-     </div>
-   </div>
 
 
   <!-- <a  href="https://api.whatsapp.com/send?phone=add-ur-number-here-without-plus-symbol-and-space" class="float" target="_blank" >
