--- a/bachelor-of-arts.html
+++ b/bachelor-of-arts.html
@@ -81,7 +81,7 @@
     </div>
     <ul class="nav-links">
       <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
-      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
       <li style="font-weight: bold;"><a href="#">Contact us</a></li>
     </ul>
   </nav>
