--- a/bachelor-of-dance.html
+++ b/bachelor-of-dance.html
@@ -2,98 +2,101 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Bachelor of Dance Admission Eligibility Scope | EDUPROV</title>
-  <meta name="description"
-    content="
-  Bachelor of Arts in Dance is a three years long UG course dealing with the art of dance and performing dance and involves movements of the body against rhythm amidst the music.">
-  <meta name="keywords" content="degree in dance, dance university, dance programs college, dance courses, dance college, courses for dance, colleges with dance programs, college for dance, bachelor of dance education, ba in dance, ba dance, what is the meaning of Dance , what is the aim of Dance , what is Dance  about, what is Dance , what are the career options in Dance , the Dance , the importance of Dance , teaching Dance , Dance , Dance  objectives, Dance   of types, Dance    Dance  class 11, Dance  meaning, Dance  in schools, Dance  in school, Dance  importance, Dance  health, Dance  degree, Dance  definition, Dance  courses, Dance  course, Dance   Dance  classical Dance, Dance  class , Dance classes,  Dance  class 11, Dance  book for class 12, Dance syllabus,   at school, pet teacher, objectives of Dance , objective of  Dance , meaning of Dance , meaning and definition of Dance , importance of Dance ,  health Dance , health in Dance , definition of Dance , define Dance , courses in Dance ,  courses for Dance , course of Dance , dance admission, bachelor of dance admission,, career options in Dance , bachelor of Dance 
-    ">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/bachelor-of-dance.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bachelor of Dance Admission Guidance in Bangalore </title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/bachelor-of-dance.html"
+      },
+      "headline": "Bachelor of Dance Admission Guidance in Bangalore",
+      "description": "Do you enjoy dancing and performing? If yes, a bachelor of arts degree in dance might be a great opening of chance for you! Bachelor of Arts in Dance is a three years long UG course",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-07-30",
+      "dateModified": "2021-07-30"
+    }
+    </script>
+  <meta name="description" content="Do you enjoy dancing and performing? If yes, a bachelor of arts degree in dance might be a great opening of chance for you! Bachelor of Arts in Dance is a three years long UG course">
+  <meta name="keywords" content=" 
+  
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Bachelor of Dance Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/bachelor-of-dance.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Do you enjoy dancing and performing? If yes, a bachelor of arts degree in dance might be a great opening of chance for you! Bachelor of Arts in Dance is a three years long UG course" />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="Bachelor of Dance Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Do you enjoy dancing and performing? If yes, a bachelor of arts degree in dance might be a great opening of chance for you! Bachelor of Arts in Dance is a three years long UG course" />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
 </head>
 
 <body>
-  <div class="bootstrap-nav">
-
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <div class="navbar-nav ml-auto ">
-            <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-                class="fa fa-home"></i> Home</a>
-            <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-                class="fa fa-phone-square"></i> Contact</a>
-            <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-                class="fa fa-user"></i> Student Form</a>
-          </div>
-        </div>
-
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
+  </div>
+  <div class="container text-white">
+      
+    <div class="row">
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">Bachelor of Dance</h1>
       </div>
-
-    </nav>
+    </div>
   </div>
   <!--Nav Bar End-->
 
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
 
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>Bachelor of Dance</h1>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
-    <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
-      </div>
-    </div>
-  </div>
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -118,7 +121,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Eligibility
         </h2>
       </div>
@@ -135,7 +138,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Syllabus
         </h2>
       </div>
@@ -161,7 +164,7 @@
     </div>
 
     <div class="col-md-12">
-      <h3 class="text-center text-primary" id="tag-font">
+      <h3 class="text-center text-dark" id="tag-font">
         Top Colleges
       </h3>
     </div>
@@ -187,7 +190,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3 class="text-center text-primary" id="tag-font">
+        <h3 class="text-center text-dark" id="tag-font">
           Scope
         </h3>
       </div>
@@ -210,7 +213,6 @@
     </div>
   </div>
   </div>
-  <hr />
 
   </div>
   
