--- a/bachelor-of-physical-education.html
+++ b/bachelor-of-physical-education.html
@@ -2,96 +2,100 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>B Physical Education Admission Eligibility Scope | Eduprov</title>
-  <meta name="description" content="Physical Education deals with the importance of physical fitness of human body. To Know about admission, eligibility, 
-  top colleges, career & scope visit EDUPROV">
-  <meta name="keywords" content="what is the meaning of physical education, what is the aim of physical education, what is physical education about, what is physical education, what are the career options in physical education, the physical education, the importance of physical education, teaching physical education, physical education pdf, physical education objectives, physical education notes of class 11, physical education notes class 12, physical education notes class 11, physical education meaning,  physical education in schools, physical education in school, physical education importance, physical  education health, physical education degree, physical education definition, physical education courses,  physical education course, physical education class 12 syllabus, physical education class 12 notes,  physical education class 12 book, physical education class 12, physical education class 11 notes,  physical education class 11 book pdf, physical education class 11 book, physical education class 11,  physical education book for class 12, physical education book for class 11, physical education book  class 11, physical education at school, pet teacher, pe notes class 12, pe notes class 11, objectives  of physical education, objective of physical education, meaning of physical education, meaning and  definition of physical education, importance of physical education, health physical education, health in physical education, definition of physical education, define physical education, courses in physical education, courses for physical education, course of physical education, class 12th physical education notes, class 12 physical education syllabus, class 12 physical education notes, class 12 physical education book, class 11 physical education notes, class 11 physical education book pdf, career options in physical education, bachelor of physical education, bachelor in physical education, aims of physical education, aim of physical education,
-    ">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/bachelor-of-physical-education.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bachelor of Physical Education Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/bachelor-of-physical-education.html"
+      },
+      "headline": "Bachelor of Physical Education Admission Guidance in Bangalore",
+      "description": "Bachelor of Physical Education or B.P.Ed is a bachelor's degree program that deals with educating people on the importance of sports and physical fitness. Generally, this course is offered as a three or four-year degree",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-07-30",
+      "dateModified": "2021-07-30"
+    }
+    </script>
+  <meta name="description" content="Bachelor of Physical Education or B.P.Ed is a bachelor's degree program that deals with educating people on the importance of sports and physical fitness. Generally, this course is offered as a three or four-year degree">
+  <meta name="keywords" content=" 
+  
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Bachelor of Physical Education Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/bachelor-of-physical-education.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Bachelor of Physical Education or B.P.Ed is a bachelor's degree program that deals with educating people on the importance of sports and physical fitness. Generally, this course is offered as a three or four-year degree" />
+  <meta property="og:image" content="https://eduprov.com/bachelor-of-physical-education.html" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="Bachelor of Physical Education Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Bachelor of Physical Education or B.P.Ed is a bachelor's degree program that deals with educating people on the importance of sports and physical fitness. Generally, this course is offered as a three or four-year degree" />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
-
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <div class="navbar-nav ml-auto ">
-            <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-                class="fa fa-home"></i> Home</a>
-            <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-                class="fa fa-phone-square"></i> Contact</a>
-            <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-                class="fa fa-user"></i> Student Form</a>
-          </div>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>Bachelor of Physical Education or B.P.Ed</h1>
-        </div>
-      </div>
+  
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">Bachelor of Physical Education</h1>
       </div>
     </div>
   </div>
+
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -115,7 +119,7 @@
 
 
     <div class="col-md-12">
-      <h2 class="text-center text-primary" id="tag-font">
+      <h2 class="text-center text-dark" id="tag-font">
         Top Colleges
       </h2>
     </div>
@@ -144,7 +148,7 @@
     </div>
     <hr />
     <div class="col-md-12">
-      <h2 class="text-center text-primary" id="tag-font">
+      <h2 class="text-center text-dark" id="tag-font">
         Scope
       </h2>
     </div>
