--- a/bba-course.html
+++ b/bba-course.html
@@ -2,94 +2,100 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>BBA Course Admission Eligibility Scope | Eduprov</title>
-  <meta name="description" content="Bachelor of Business Administration edify on develop business, 
-    marketing, finance, HR, entrepreneurship skills. Get admission in colleges, career visit EDUPROV
-    ">
-  <meta name="keywords" content="bba,bba course,bachelor of business administration,business administration,bba degree,mba in business management,bba marketing,bba course information,bba in international business,courses in business management,business degree,business management degree,business administration course,bachelor of business,business administration and management,mba management,bba management,bachelor of administration,bachelor degree in business,bachelor of business studies,ba business management,ba in business,bba business administration,accounting administration,bba in management,bba human resource management,study business management,bba bachelor of business administration,mba in public administration,bba course year,bsc in business management,bba full information,bba marketing management,college for business management,bba in,bba in human resources,bba degree course,mba is postgraduate,bba year,bba about,international business administration,business admin,bs business administration,business management classes,college of business administration,bs business management,business administration marketing,institute of business administration,business admin degree,business office administration,business administration and finance,accounting and business management,business administration finance,bs in business,bachelor of commerce in business management,business administration degree courses,business administration classes,types of business studies,types of business management degrees,business administration and management degree,business and administration degree,business it degree,bachelor of business administration in accounting,business administration colleges,bachelor of business finance,ba administration,business administration and management courses,business management degree courses,bachelor of business administration in marketing,business management and economics,best business administration schools,business and administration course,business management college,bsc administration,science and business management,business administration and digital management,postgraduate in business administration,types of business administration,bachelor of business administration in finance,business administration short courses,school business administrator,business management & administration,bs business administration and accountancy,science in business administration,bachelor of business administration honours,business and it degree,bachelor of business human resource management,business management degree classes,business administration courses part time,bachelor of business administration in management,business management degree colleges,admin degree,best universities for business administration,business administration and commerce,bsc in business,business administration studies,business administration and marketing,bs management information systems,business administration and management studies,business administration marketing management,bsc in economics and business administration,ba hons business administration,business administration economics,commerce and business administration,btech business administration,business administration information,bba related courses,about bba course in degree,about business management course,two year business degree,business administration education,business administration general business,business master's degree,bachelor of business bachelor of science in information technology,business administration degree colleges,business administration leadership and management,bs degree in business administration,business management and law,bachelor of business administration and management,bachelor of business courses,business administration management course,bba administration,accounting and business administration,business administration resources,types of business management courses,college business administration,bba modules,business administration general management,business administration college courses,business admin management,bba management degree,college of commerce and business administration,bba general management,institute of business administration and management,business studies and economics,bachelor of business and administration,bachelor international business administration,business administration degree part time,bachelor of business human resources,bba information management,bsc business studies,business admin accounting,bs bba,bs business education,bba international management,bachelor of business in marketing,management accounting bba,bachelor degree in business administration and management,bachelor of business and marketing,bachelor of business administration courses,business administration bachelor of arts,international business administration degree,international business administration bachelor,bba is bachelor degree,bachelor in economics and business administration,bba general business,bachelors in business administration human resources,bachelor of business administration requirements,bachelor of business and finance,undergraduate in business administration,bachelor of business studies course details,bs in business admin,bba with international business,bachelor of business administration in french,the bachelor of business administration,bachelor of business it,science business management,ba global business management,bach of business,bachelors in general business,bachelor of business prerequisites,bs in commerce and business administration,bs business marketing,bachelor of business administration curriculum,best universities for bachelor in business administration,business administration and management bachelor degree,bachelor of business administration ug,bba international business management,bachelor in bba,bachelor of business administration best universities,bachelor of business administration honors,bachelor of business administration in hospitality management,bachelor of business management and entrepreneurship,bachelor of business administration and bachelor of psychology,bachelor of business administration in information systems,bachelor of business administration information,bachelor of business studies colleges,bachelor of business management course,bachelors of business science,bs business management course,bachelor of business administration information technology,bs business finance,bachelor of business administration uts,integrated bachelor of business administration programme,bachelor of commerce business administration,bba marketing colleges,bs finance management,bachelor of business administration in international business and global management,bachelor's degree in economics and business administration,community college business degree,business and information administration,bachelor of business studies with education,degree of bachelor of science in business administration,
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/bba-course.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bachelor of Business Administration Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/bba-course.html"
+      },
+      "headline": "Bachelor of Business Administration Admission Guidance in Bangalore",
+      "description": "Business administration is a challenging task. Every single decision is very important in a business which may lead to growth or loss. Every single person who loves to face adventures in day to day life in the field of business can choose this course.",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-07-30",
+      "dateModified": "2021-07-30"
+    }
+    </script>
+  <meta name="description" content="Business administration is a challenging task. Every single decision is very important in a business which may lead to growth or loss. Every single person who loves to face adventures in day to day life in the field of business can choose this course.">
+  <meta name="keywords" content=" 
   
-    ">
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Bachelor of Business Administration Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/bba-course.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Business administration is a challenging task. Every single decision is very important in a business which may lead to growth or loss. Every single person who loves to face adventures in day to day life in the field of business can choose this course." />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="Bachelor of Business Administration Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Business administration is a challenging task. Every single decision is very important in a business which may lead to growth or loss. Every single person who loves to face adventures in day to day life in the field of business can choose this course." />
+  <meta name="twitter:image" content="" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>BBA</h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">Bachelor of Business Administration</h1>
       </div>
     </div>
   </div>
+
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -101,7 +107,7 @@
           this challenging course.
         </p>
 
-        <p class="text-justify">
+        <p class="text-justify" id="paragraph-font">
           The <strong>Bachelor of Business Administration (B.B.A or BBA)</strong> is an undergraduate program in
           business administration
           and commerce. It is a 3 years degree course that awarded you after finishing your study in one or more areas
@@ -113,7 +119,7 @@
           experience
           in guiding the candidates.
         </p>
-        <p class="text-justify">
+        <p class="text-justify" id="paragraph-font">
           The <strong>BBA degree</strong> is specially designed to provide a wide knowledge about the functional aspects
           of a company and their interconnection,
           while you can also allowing for specialization in a particular area. BBA program display students to a
@@ -124,7 +130,7 @@
           practical experience and training, in the form of presentations, projects, internships, interaction and
           industrial visits with experts from the industry.
         </p>
-        <p class="text-justify">
+        <p class="text-justify" id="paragraph-font">
           The course may emphasize the development of quantitative reasoning, communications,
           and business analysis skills. With this, you can gain knowledge of business process
           and practices, awareness of global business issues, business theory, business law and
@@ -138,7 +144,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Eligibility
         </h2>
       </div>
@@ -149,21 +155,21 @@
           The candidate should be a pass Higher Secondary or equivalent above 40%. The General age requirement is 17
           years.
         </p>
-        <p>
+        <p class="text-justify" id="paragraph-font">
           The candidate needs to submit an application along with all necessary documents such as the 10th and 12th mark
           sheet, school leaving certificate, identity proof, domicile certificate, and extracurricular certificate.
         </p>
-        <P>
+        <p class="text-justify" id="paragraph-font">
           Now everything is modernized and the admission application forms can easily be downloaded from the college
           website or you can visit EDUPROV’s website to fill the application by selecting multiple colleges and
           uploading necessary documents and <strong>EDUPROV</strong> Admission Counselors will assist you in admission
           to your preferred college of yours.
-        </P>
+        </p>
         <hr />
       </div>
 
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Scope
         </h2>
       </div>
