--- a/bds-course.html
+++ b/bds-course.html
@@ -2,93 +2,99 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>BDS Admission Eligibility Entrance Exam Scope | Eduprov</title>
-  <meta name="description"
-    content="BDS deals with study of oral health, hygiene in dentistry & the tooth spectrum. Know about entrance exam, admission, counseling top, colleges & scope @ EDUPROV">
-  <meta name="keywords"
-    content="	admission process for Dental Surgery, Bachelor of Dental Surgery, Bachelor of Dental Surgery admission, Bachelor of Dental Surgery admission bangalore, Bachelor of Dental Surgery bangalore, Bachelor of Dental Surgery eligibility, Dental Surgery﻿, Dental Surgery Admission, Dental Surgery admissions, Dental Surgery bangalore admission proccess, Dental Surgery﻿ career, Dental Surgery eligibility, Dental Surgery Scope, Medical Courses, scope for Dental Surgery">
-  <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="canonical" href="https://eduprov.com/bds-course.html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bachelor of Dental Surgery Admission Guidance in Bangalore</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://eduprov.com/bds-course.html"
+        },
+        "headline": "Bachelor of Dental Surgery Admission Guidance in Bangalore",
+        "description": "BDS Admission which is an undergraduate level degree program in the field of oral health care. Candidates who wish to groom their careers in dental surgery  can opt for this course. Science stream of biology group are eligible to pursue this professional course after their 12th.",
+        "image": "https://eduprov.com/images/favicon.png",  
+        "author": {
+          "@type": "Person",
+          "name": "thephotogenicbug"
+        },  
+        "publisher": {
+          "@type": "Organization",
+          "name": "Eduprov",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://eduprov.com/images/favicon.png"
+          }
+        },
+        "datePublished": "2021-07-30",
+        "dateModified": "2021-07-30"
+      }
+      </script>
+    <meta name="description" content="BDS Admission which is an undergraduate level degree program in the field of oral health care. Candidates who wish to groom their careers in dental surgery  can opt for this course. Science stream of biology group are eligible to pursue this professional course after their 12th. ">
+    <meta name="keywords" content=" 
+    
+    ">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Bachelor of Dental Surgery Admission Guidance in Bangalore" />
+    <meta property="og:url" content="https://eduprov.com/bds-course.html" />
+    <meta property="og:site_name" content="Eduprov Educational Institute" />
+    <meta property="og:description"
+      content="BDS Admission which is an undergraduate level degree program in the field of oral health care. Candidates who wish to groom their careers in dental surgery  can opt for this course. Science stream of biology group are eligible to pursue this professional course after their 12th." />
+    <meta property="og:image" content="#" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@eduprov" />
+    <meta name="twitter:title" content="Bachelor of Dental Surgery Admission Guidance in Bangalore" />
+    <meta name="twitter:description"
+      content="BDS Admission which is an undergraduate level degree program in the field of oral health care. Candidates who wish to groom their careers in dental surgery  can opt for this course. Science stream of biology group are eligible to pursue this professional course after their 12th." />
+    <meta name="twitter:image" content="#" />
+    <meta name="twitter:url" content="https://twitter.com/eduprov" />
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+    <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+    <meta name="author" content="thephotogenicbug">
+    <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="accordian.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+    <!-- MDB -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
-
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>Bachelor of Dental Surgery</h1>
-        </div>
-      </div>
+ 
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">Bachelor of Dental Surgery </h1>
       </div>
     </div>
   </div>
-  <!--container Start-->
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -139,7 +145,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Eligibility
         </h2>
       </div>
@@ -169,7 +175,7 @@
       </div>
 
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           BDS Entrance Exam
         </h2>
       </div>
@@ -191,7 +197,7 @@
         <hr />
       </div>
       <div class="col-md-12">
-        <h3 class="text-center text-primary" id="tag-font">
+        <h3 class="text-center text-dark" id="tag-font">
           NEET Highlights
         </h3>
       </div>
@@ -235,7 +241,7 @@
     </div>
     <hr>
     <div class="col-md-12">
-      <h3 class="text-center text-primary" id="tag-font">
+      <h3 class="text-center text-dark" id="tag-font">
         Syllabus
       </h3>
     </div>
@@ -293,7 +299,7 @@
 
 
     <div class="col-md-12">
-      <h3 class="text-center text-primary" id="tag-font">
+      <h3 class="text-center text-dark" id="tag-font">
         Scope
       </h3>
     </div>
