--- a/bfd-course.html
+++ b/bfd-course.html
@@ -2,94 +2,99 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>BFD Course Admission Eligibility Scope | Eduprov</title>
-  <meta name="description" content="Fashion Designing deals with most recent trends in fashion industry, creative patterns of clothing line. Get admission in colleges, counseling & scope @ EDUPROV
+  <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="canonical" href="https://eduprov.com/bfd-course.html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bachelor of Fashion Designing Admission Guidance in Bangalore</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://eduprov.com/bfd-course.html"
+        },
+        "headline": "Bachelor of Fashion Designing Admission Guidance in Bangalore",
+        "description": "In this trendy era, the world demands the most fashionable and snazzy dresses and outfits. There are many fan followers of the modish dresses as everyone wants to look up to date, but who transforms a useless piece of cloth into the most stylish donning dress.",
+        "image": "https://eduprov.com/images/favicon.png",  
+        "author": {
+          "@type": "Person",
+          "name": "thephotogenicbug"
+        },  
+        "publisher": {
+          "@type": "Organization",
+          "name": "Eduprov",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://eduprov.com/images/favicon.png"
+          }
+        },
+        "datePublished": "2021-07-30",
+        "dateModified": "2021-07-30"
+      }
+      </script>
+    <meta name="description" content="In this trendy era, the world demands the most fashionable and snazzy dresses and outfits. There are many fan followers of the modish dresses as everyone wants to look up to date, but who transforms a useless piece of cloth into the most stylish donning dress.">
+    <meta name="keywords" content=" 
+    
     ">
-  <meta name="keywords" content="fasion designing,fasion designing course,bachelor of designing,bachelor of fashion design,famous fasion designers,bachelor's degree in fashion designing,bachelor of design salary,fasion and design,ba design,bachelor of fashion,bachelor degree of fashion designing,fashion designer bachelor degree,industrial design bachelor's degree,bachelor of design colleges,bachelor of interior design course,fashion designing bachelor course,bachelor of design eligibility,bachelor of fashion business,bachelor of interior design eligibility,bachelor of branded fashion design,bachelor of interior design course duration,ba designer,bachelor of fashion and apparel design,bachelor of fashion designing course,best colleges for bachelor of design,bachelors in fashion,fashion business bachelor degree,bachelor of design and business,bachelor in interior design syllabus,bachelor of spatial design,bachelor of fashion design short form,bachelor's degree in fashion design salary,interior designer bachelor's degree,bachelor of design careers,bachelor of textile design colleges,eligibility for b design,
-  
-    ">
-  <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Bachelor of Fashion Designing Admission Guidance in Bangalore" />
+    <meta property="og:url" content="https://eduprov.com/bfd-course.html" />
+    <meta property="og:site_name" content="Eduprov Educational Institute" />
+    <meta property="og:description"
+      content="In this trendy era, the world demands the most fashionable and snazzy dresses and outfits. There are many fan followers of the modish dresses as everyone wants to look up to date, but who transforms a useless piece of cloth into the most stylish donning dress." />
+    <meta property="og:image" content="#" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@eduprov" />
+    <meta name="twitter:title" content="Bachelor of Fashion Designing Admission Guidance in Bangalore" />
+    <meta name="twitter:description"
+      content="In this trendy era, the world demands the most fashionable and snazzy dresses and outfits. There are many fan followers of the modish dresses as everyone wants to look up to date, but who transforms a useless piece of cloth into the most stylish donning dress." />
+    <meta name="twitter:image" content="#" />
+    <meta name="twitter:url" content="https://twitter.com/eduprov" />
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+    <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+    <meta name="author" content="thephotogenicbug">
+    <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="accordian.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+    <!-- MDB -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
-
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>Bachelor of Fashion Designing</h1>
-        </div>
-      </div>
+  
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">Bachelor of Fashion Designing </h1>
       </div>
     </div>
   </div>
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -125,7 +130,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Eligibility
         </h2>
       </div>
@@ -151,7 +156,7 @@
       </div>
 
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Scope
         </h2>
       </div>
