--- a/bmlt.html
+++ b/bmlt.html
@@ -2,93 +2,101 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>BMLT Admission Eligibility Scope | Eduprov</title>
-  <meta name="description" content="Bachelor of Medical Lab Technology deal with diagnosis, prevention of diseases with laboratory tests, Get details on admission, Eligibility, colleges at EDUPROV
-    ">
-  <meta name="keywords" content="bmlt admission, bmlt college, bmlt syllabus, b.sc medical lab technology, bmlt course fee, bmlt course fees, bmlt course details in hindi, bmlt course details, bmlt salary, bmlt full form, bmlt course, mlt course, mlt courses, mlt, bmlt course, bmlt, bsc mlt, mlt full form, bmlt full form, bmlt salary, lab technician course fees, mlt means, bsc mlt course, lab technician course qualification, bmlt course details, bmlt course details in hindi, bsc medical lab technology, mlt course details, bmlt course fee, bmlt course fees, Bachelor in Medical Laboratory Technology college, Bachelor in Medical Laboratory Technology syllabus, b.sc medical lab technology, Bachelor in Medical Laboratory Technology course fee, Bachelor in Medical Laboratory Technology course fees, Bachelor in Medical Laboratory Technology course details in hindi, Bachelor in Medical Laboratory Technology course details, Bachelor in Medical Laboratory Technology salary, Bachelor in Medical Laboratory Technology, Bachelor in Medical Laboratory Technology course, mlt course, mlt courses, mlt, Bachelor in Medical Laboratory Technology course, Bachelor in Medical Laboratory Technology, bsc mlt, mlt full form, Bachelor in Medical Laboratory Technology , Bachelor in Medical Laboratory Technology salary, lab technician course fees, mlt means, mlt course, lab technician course qualification, Bachelor in Medical Laboratory Technology course details, Bachelor in Medical Laboratory Technology course details in hindi, bsc medical lab technology, mlt course  details, Bachelor in Medical Laboratory Technology course fee, Bachelor in Medical Laboratory Technology  course fees,
-    ">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/bmlt.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bachelor of Medical Laboratory Technology Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/bmlt.html"
+      },
+      "headline": "Bachelor of Medical Laboratory Technology Admission Guidance in Bangalore",
+      "description": "Our body is a great composition of a variety of things. We always have an essential requirement of components like the proteins, carbohydrates, vitamins, and so on for nourishing our body, but when we ignore any of these things then what happens?",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-07-30",
+      "dateModified": "2021-07-30"
+    }
+    </script>
+  <meta name="description" content="Our body is a great composition of a variety of things. We always have an essential requirement of components like the proteins, carbohydrates, vitamins, and so on for nourishing our body, but when we ignore any of these things then what happens?">
+  <meta name="keywords" content=" 
+  
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Bachelor of Medical Laboratory Technology Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/bmlt.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Our body is a great composition of a variety of things. We always have an essential requirement of components like the proteins, carbohydrates, vitamins, and so on for nourishing our body, but when we ignore any of these things then what happens?" />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="Bachelor of Medical Laboratory Technology Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Our body is a great composition of a variety of things. We always have an essential requirement of components like the proteins, carbohydrates, vitamins, and so on for nourishing our body, but when we ignore any of these things then what happens?" />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>Bachelor of Medical Laboratory Technology (BMLT)</h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">Bachelor of Medical Laboratory Technology</h1>
       </div>
     </div>
   </div>
+
+
+ 
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -121,7 +129,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Eligibility
         </h2>
       </div>
@@ -141,7 +149,7 @@
       </div>
 
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Scope
         </h2>
       </div>
